--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,84 @@
 body {
     box-sizing: border-box;
     margin: 0px;
-    color: rgba(29, 29, 29, 0.7)
+    color: rgba(29, 29, 29, 0.7);
     font-size: 15px;
-    font-weigth: 500;
+    font-weight: 500;
     font-style: normal;
-    line-weight: 1em;
+    line-height: 1em;
 }
 .pixar {
-    color: rgb(189, 60, 60)14, 34, 34);
+    color: white;
     font-family: brandon-grotesque;
     text-transform: uppercase;
     letter-spacing: 0.29cm;
 }
+
+.indent {
+
+    margin-left: 20px;
+}
+
+ul,ol {
+
+list-style: none; 
+
+}
+
+li {
+
+    text-transform: uppercase;
+    color: rgb(29, 29, 29);
+}
+    a, a:focus, a:active {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: rgb(196,196,196);
+    }
+.flex-enabled {
+    display: flex;
+}
+
+nav ul li {
+    margin-left: 1em;
+    margin-right: 1.4em;
+    white-space: nowrap;
+}
+
+nav{
+    margin-top: 31px;
+    margin-bottom: 31px;
+}
+
+.flex-right {
+    flex-direction: row;
+    flex:1;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.flex-center {
+    align-items: center;
+    justify-content: center;
+}
+
+.headline {
+    font-weight: 900;
+    font-size: 51px;
+    white-space: nowrap;
+}
+
+.floating {
+    position: absolute;
+}
+
+.feature-image {
+    width: 100%;
+}
+
 .favorites {
     font-weight: 700;
 }
